--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -25,4 +25,4 @@ jobs:
         run: npm install
 
       - name: 🚀 Build APK
-        run: npx eas build --platform android --profile preview --non-interactive --no-wait
+        run: eas build --platform android --profile preview --non-interactive --no-wait
