--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -24,20 +24,9 @@ jobs:
       - name: 📦 Install dependencies
         run: npm install
 
-      - name: 🚀 Install EAS CLI and Build
-        # We removed --no-wait so GitHub stays active until the APK is done
-        run: |
-          npm install -g eas-cli
-          eas build --platform android --profile preview --non-interactive
+      - name: 🚀 Build APK
+        # We use 'npx eas-cli' instead of just 'eas' to be 100% explicit
+        run: npx eas-cli build --platform android --profile preview --non-interactive --no-wait
 
-      - name: 📥 Download APK Artifact
-        # This helper step pulls the finished file from Expo's servers to GitHub
-        run: |
-          mkdir -p build
-          curl -L $(eas build:list --platform android --profile preview --limit 1 --json | jq -r '.[0].artifacts.buildUrl') -o build/app-release.apk
-
-      - name: 📤 Upload to GitHub Summary
-        uses: actions/upload-artifact@v4
-        with:
-          name: android-apk
-          path: build/app-release.apk
+      - name: ✅ Success Message
+        run: echo "Build has been triggered! Go to https://expo.dev/artifacts to see progress."
